Fix wrong namespace and add wire flame layout
Resolve too much deep namespace than intention

--- a/WebPagePractice170409/WebPagePractice170409/css/saisei.home.css
+++ b/WebPagePractice170409/WebPagePractice170409/css/saisei.home.css
@@ -1,6 +1,6 @@
-﻿        .saisei-main-gallery{
+﻿        .saisei-main-home{
             top:-2em;
-            left:7.5em;
+            left:1.5em;
             height:2em;
             width:4em;
             text-align:center;
