--- a/WebPagePractice170409/WebPagePractice170409/css/saisei.about.css
+++ b/WebPagePractice170409/WebPagePractice170409/css/saisei.about.css
@@ -1,2 +1,12 @@
-﻿body {
-}
+﻿        .saisei-main-about{
+            top:-2em;
+            left:13.5em;
+            height:2em;
+            width:4em;
+            text-align:center;
+            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+            font-size:300%;
+            font-style:italic;
+            color:#4ca20b;
+            border-radius: 10px;
+        }
