--- a/WebPagePractice170409/WebPagePractice170409/css/saisei.home.css
+++ b/WebPagePractice170409/WebPagePractice170409/css/saisei.home.css
@@ -1,12 +1,56 @@
-﻿        .saisei-main-home{
-            top:-2em;
-            left:1.5em;
-            height:2em;
-            width:4em;
-            text-align:center;
-            font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
-            font-size:300%;
-            font-style:italic;
-            color:#4ca20b;
-            border-radius: 10px;
-        }
+﻿.saisei-main-home{
+    top:-2em;
+    left:1.5em;
+    height:2em;
+    width:4em;
+    text-align:center;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-size:300%;
+    font-style:italic;
+    color:#4ca20b;
+    border-radius: 10px;
+}
+
+.saisei-home-img {
+    top:0;
+    left:0;
+    right:0;
+    height:60%;
+    background-color:#b6b5b5;
+    background-image:url("../images/shell-img001.jpg");
+    background-repeat:no-repeat;
+    background-position: top center;
+}
+
+.saisei-home-img-text {
+    top:60%;
+    left:0;
+    right:0;
+    height:2em;
+    text-align:center;
+    background-color:#bbfcc4;
+}
+
+.saisei-home-dl-title {
+    clear: both;
+	margin-bottom: 15px;
+	color: #fff;		
+	padding: 5px 20px;	
+	background: #767164;
+	border-radius: 4px;
+}
+
+.saisei-home-dl {
+    padding-left: 4em;
+	margin-bottom: 1em;
+}
+
+.saisei-home-dt {
+    font-weight: bold;
+	float: left;
+	width: 8em;
+}
+
+.saisei-home-dd {
+    padding-left: 8em;
+}
