--- a/WebPagePractice170409/WebPagePractice170409/css/saisei.shell.css
+++ b/WebPagePractice170409/WebPagePractice170409/css/saisei.shell.css
@@ -9,6 +9,7 @@
 	-webkit-text-size-adjust: none;
 }
 h1,h2,h3,h4,h5,p,ul,ol,li,dl,dt,dd,form,figure,form {margin: 0px;padding: 0px;font-size: 100%;}
+h1{text-shadow: 5px 5px 1px #999999}
 ul {list-style-type: none;}
 ol {padding-left: 40px;padding-bottom: 15px;}
 img {border: none;max-width: 100%;height: auto;vertical-align: middle;}
@@ -21,8 +22,9 @@ a {
 	-webkit-transition: 0.5s;	/*マウスオン時の移り変わるまでの時間設定。0.5秒。*/
 	transition: 0.5s;			/*同上*/
 }
-a:hover {
-	color: #d27779;	/*マウスオン時の文字色*/
+.saisei-hover {
+	/*border: 5px solid #767164;*/
+    text-shadow: 5px 5px 1px #999999;
 }
 
 
@@ -52,7 +54,7 @@ a:hover {
             left:0;
             right:0;
             height:2.4em;
-            background: #3a8104 url("images/ui-bg_highlight-soft_33_3a8104_1x100.png") 92% 8% repeat-x;
+            background: #3a8104 url("../images/ui-bg_highlight-soft_33_3a8104_1x100.png") 92% 8% repeat-x;
             text-align:left;
             text-indent:1em;
             font-size:400%;
@@ -78,6 +80,7 @@ a:hover {
             border-radius: 10px;
         }
         .saisei-foot{
+            clear: both;
             top:66em;
             left:4em;
             right:4em;
