--- a/WebPagePractice170409/WebPagePractice170409/css/saisei.home.css
+++ b/WebPagePractice170409/WebPagePractice170409/css/saisei.home.css
@@ -18,7 +18,7 @@
     height:60%;
     width:100%;
     background-color:#b6b5b5;
-    background-image:url("../images/shell-img001.jpg");
+    /*background-image:url("../images/shell-img001.jpg");*/
     background-repeat:no-repeat;
     background-position: top center;
 }
